# MageMadness

./: CMakeLists.txt  README.md
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
mage_madness/: button.cpp  button.h  cloud.h  data.cpp  data.h  enemySpikey.cpp  enemySpikey.h  enemyTurret.cpp  enemyTurret.h  entity.cpp  entity.h  entity_management.cpp  entity_management.h  hud.cpp  hud.h  main.cpp  pickup.cpp  pickup.h  player.cpp  player.h  projectile.cpp  projectile.h  tile.cpp  tile.h
res/img/: HUDover.pdn
res/levels/: bossLevel1.txt  bossLevel2.txt  bossLevel3.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  maze.txt  tutOne.txt  tutThree.txt  tutTwo.txt
